Reinitialized project and added all files

--- a/.github/workflows/deploy-backend.yml.yml
+++ b/.github/workflows/deploy-backend.yml.yml
@@ -30,7 +30,7 @@ jobs:
 
      # - name: Run Unit Tests
       #  run: |
-     #     cd crmBackend
+     #     cd crmBackendz
       #    npm test
 
       - name: Log in to Docker Hub
